# stm32-swissknife

./: .gitignore  LICENSES.md
HAL/User/: CMakeLists.txt
HAL/User/App/crsf/: app.c
HAL/User/Components/: servo.c  servo.h
HAL/User/Drivers/: CMakeLists.txt  buzzer_driver.c  buzzer_driver.h  delay_driver.c  delay_driver.h  dht11_driver.c  led_driver.c  led_driver.h  motor_driver.h  ssd1306_fonts_custom.c  uart_driver.c  uart_driver.h
HAL/User/Drivers/Inc/: crsf.h  crsf_protocol.h  delay_driver.h  dht11_driver.h  motor_driver.h  pid.h  servo.h  ssd1306_conf.h  uart_driver.h
HAL/User/Drivers/Src/: buzzer_driver.c  crsf.c  delay_driver.c  key_driver.c  led_driver.c  motor_driver.c  pid.c  servo.c  ssd1306.c  ssd1306_custom.c  ssd1306_tests.c  uart_driver.c
HAL/User/Drivers/Tests/: crsf_protocol_test.c  delay_driver_test.c  key_driver_test.c  motor_driver_test.c  ssd1306_tests.c  uart_driver_test.c
HAL/User/Middlewares/Protocols/: crsf_protocol.h
HAL/User/components/littlefs/: littlefs_port.c  littlefs_port.h
HAL/User/components/servo/: servo_port.c
HAL/User/components/tests/: easy-logger_tests.c
HAL/User/components/u8g2/: u8g2_port.c
HAL/User/drivers/: buzzer.c  delay.c  dht11.c  dht11.h  key.c  led.c  motor.c  mpu6050.c  ssd1306_fonts_custom.h  uart.c  uart.h
HAL/User/drivers/afiskon-stm32-ssd1306/: ssd1306.c  ssd1306.h  ssd1306_custom.c  ssd1306_custom.h  ssd1306_fonts_custom.c  ssd1306_fonts_custom.h
HAL/User/drivers/tests/: servo_motor_tests.c  ssd1306_custom_tests.c
HAL/User/tools/: pid_tuner.py
HAL/user/: CMakeLists.txt
HAL/user/applications/stepper_demo/: main.c
HAL/user/components/: PROJECT_SUMMARY.md  letter-shell_port.c  letter-shell_port.h  littlefs_port.c  littlefs_port.h  servo.c  servo.h  servo_port.c  servo_port.h  u8g2_port.c  u8g2_port.h
HAL/user/drivers/: adc_filter.c  adc_filter.h  at24cxx.c  can_driver.h  dc_motor.c  dc_motor.h  delay_driver.h  dht11_driver.c  ds18b20.h  encoder_knob.h  encoder_motor.h  esp8266.h  hc_sr04.c  hc_sr04.h  ili9341.c  ili9488.c  internal_flash.h  ir_nec_tim.c  ir_nec_tim.h  key_driver.h  light_sensor.c  light_sensor.h  mpu6050_driver.c  nrf24l01.h  potentiometer.h  rs485.c  rs485.h  rtc_driver.h  servo_motor.c  servo_motor.h  soft_i2c.h  soft_spi.c  st7735.h  st7789.c  st7789.h  stepper_motor.c  uart_driver.c  usb_serial.c  usb_serial.h  w25qxx.c  (+5 more)
HAL/user/drivers/io/: buzzer.c  (+2 more)
user/: CMakeLists.txt  platform_hal.h
user/applications/: CMakeLists.txt  freertos_test.c  freertos_tests.c  i2c_master_slave.c
user/applications/freertos_producer_consumer/: app_main.c  app_main.h  consumer_task.c  producer_task.c
user/applications/i2c_master_slave/: i2c_master_slave.c
user/components/: CMakeLists.txt
user/components/cjson/: cjson.h  update_cjson.ps1
user/components/coremqtt/: README.md  coremqtt.h
user/components/flexible_button/: flexible_button_port.c  update_flexible_button.ps1
user/components/freertos/: FreeRTOSConfig.h  README.md  freertos_port.c  update_freertos.ps1
user/components/lvgl/: lvgl_port.c
user/components/lwrb/: lwrb.h
user/components/multitimer/: multitimer.h  multitimer_port.c
user/components/nanomodbus/: update_nanomodbus.ps1
user/components/servo/: servo_port.h
user/components/sfud/: INTEGRATION.md  update_sfud.ps1
user/components/tests/: coremqtt_tests.c  easy-logger_tests.c  flexible_button_tests.c  letter-shell_tests.c  lvgl_tests.c  lwrb_tests.c  multitimer_tests.c
user/drivers/: CMakeLists.txt
user/drivers/communication/: can_driver.h  esp8266.c  ir_nec_exti.h  ir_nec_tim.h  nrf24l01.h  rs485.h  uart.c  uart.h  uart_README.md  uart_tests.c  usb_cdc.c  usb_cdc.h  usb_cdc_README.md  usb_cdc_tests.c  usb_serial.c  w5500.h
user/drivers/display/: ili9341.h  ili9488.h  ssd1306_custom.h  st7735.h  st7789.c  st7789.h
user/drivers/encoder/: encoder_knob.h  encoder_motor.h
user/drivers/interface/: soft_i2c.c
user/drivers/io/: buzzer.h  buzzer_README.md  buzzer_tests.c  key.c  key.h  key_README.md  key_matrix.c  key_matrix.h  key_matrix_tests.c  key_single.c  key_single_README.md  key_single_tests.c  led.c  led.h  led_README.md  led_tests.c  ws2812.c  ws2812.h  ws2812_README.md  ws2812_tests.c  xpt2046.c  xpt2046.h  xpt2046_README.md  xpt2046_tests.c
user/drivers/motor/: bldc_motor_esc_encoder.c  bldc_motor_esc_encoder.h  servo_motor.h  stepper_motor.h
user/drivers/sensor/: bh1750.c  bh1750.h  bh1750_README.md  bh1750_tests.c  dht11.c  dht11.h  dht11_README.md  dht11_tests.c  ds18b20.c  ds18b20.h  ds18b20_README.md  ds18b20_tests.c  hc_sr04.c  hc_sr04.h  hc_sr04_README.md  hc_sr04_tests.c  light_sensor.c  light_sensor.h  light_sensor_README.md  light_sensor_tests.c  mpu6050.c  mpu6050.h  mpu6050_README.md  mpu6050_tests.c  potentiometer.c  potentiometer.h  potentiometer_README.md  potentiometer_tests.c
user/drivers/storage/: at24cxx.h  at24cxx_tests.c  internal_flash.c  internal_flash.h  internal_flash_tests.c  sd_card_spi.c  sd_card_spi.h  sd_card_spi_tests.c  w25qxx.h
user/drivers/system/: delay.c  delay.h  delay_README.md  delay_tests.c  rtc_driver.c  rtc_driver.h  rtc_driver_README.md  rtc_driver_tests.c  watchdog.c  watchdog.h  watchdog_README.md  watchdog_tests.c
user/drivers/tests/: adc_tests.c  at24cxx_tests.c  bh1750_tests.c  bldc_motor_esc_encoder_tests.c  buzzer_tests.c  can_tests.c  crsf_protocol_test.c  delay_tests.c  dht11_tests.c  ds18b20_tests.c  encoder_tests.c  esp8266_mqtt_tests.c  esp8266_tests.c  hc_sr04_tests.c  ili9341_tests.c  ili9488_tests.c  internal_flash_tests.c  ir_tests.c  key_tests.c  led_tests.c  light_sensor_tests.c  mpu6050_tests.c  nrf24l01_tests.c  potentiometer_tests.c  rs485_tests.c  rtc_tests.c  sd_card_spi_tests.c  servo_motor_tests.c  ssd1306_custom_tests.c  st7735_tests.c  st7789_tests.c  stepper_motor_tests.c  uart_tests.c  usb_serial_tests.c  w25qxx_test.c  w25qxx_tests.c  w5500_tests.c  watchdog_tests.c  ws2812_tests.c  xpt2046_tests.c
user/middlewares/: CMakeLists.txt
user/middlewares/algorithms/: pid.c  pid.h
user/middlewares/protocols/: crsf.h  crsf_protocol.h
user/tips/: freertos_tips.md
(+263 files in other folders)
